tests/error/private_type_err.gw
#! [contains] can't use private type
class C {
  class private D {
  }
}

var C.D d;
